add docker to the project